# cosmic-wavs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  WAVSai-claude-integration.md  WAVSai-example-ens.md  WAVSai-next-steps.md  WAVSai-process.md  WAVSai-summary.md  WAVSai.md  checks.md  claude.md  claude_updates.md  cli.toml  component-rules.md  docker-compose.telemetry.yml  docker-compose.yml  error.md  errors.md  eth-errors-2.md  eth-errors-3.md  eth-errors-4.md  eth-errors-5.md  eth-errors-6.md  eth-errors-7.md  eth-errors-8.md  eth-errors.md  foundry.toml  metadata.json  package-lock.json  package.json  remappings.txt  rules.md  script.sh  wavs.toml
.cosmos/data/: app.toml.bak  config.toml.bak  genesis.json
.cosmos/defaults/: client.toml  config.toml
.cursor/rules/: blockchain-interactions.mdc  commands.mdc  component.mdc  cursor-rules.mdc  making-components.mdc  network-requests.mdc  overview.mdc  service.mdc  submission.mdc  template.mdc  triggers.mdc  utilities.mdc  variables.mdc  workflows.mdc
.github/: single-wavs-image-verifier.bash
.github/workflows/: config.json  docs-ci.yml  e2e.yml
claude/: WAVSai-claude.md  new-claude.md  rules.md
components/cosmic-wavs-demo-infusion/: Cargo.toml  README.md
components/cosmic-wavs-demo-infusion/src/: lib.rs
components/cosmic-wavs-infusion/: Cargo.toml  Makefile  README.md
components/cosmic-wavs-infusion/src/: lib.rs
components/cosmwasm-burn-to-mint/: Cargo.toml  plan.md
components/cosmwasm-burn-to-mint/src/: lib.rs
components/eth-price-oracle/: Cargo.toml  Makefile  README.md  config.json
components/eth-price-oracle/src/: bindings.rs  lib.rs  trigger.rs
components/evm-price-oracle/: Cargo.toml
components/evm-price-oracle/src/: bindings.rs  lib.rs  trigger.rs
components/golang-eth-price-oracle/: Makefile  README.md  config.json  go.mod  go.sum  wavs:worker@0.4.0-alpha.1.wasm
components/golang-eth-price-oracle/src/: cmc.go  main.go
components/golang-evm-price-oracle/: Makefile  README.md  config.json  go.mod  go.sum
components/golang-evm-price-oracle/src/: main.go
components/js-eth-price-oracle/: Makefile  README.md  config.json  index.ts  package-lock.json  package.json  trigger.ts
components/js-evm-price-oracle/: Makefile  README.md  config.json  index.ts  package-lock.json  package.json  trigger.ts
components/nft-ownership-checker/: Cargo.toml
components/test_utils/: CLAUDE_SIMPLIFIED.md  Cargo.toml  README.md  fix_validation.sh  fix_validation_full.sh  run_tests.sh  validate_component.sh  validate_component.sh.bak  validate_component.sh.old
components/test_utils/src/: abi_encoding.rs  code_quality.rs  data_handling.rs  input_validation.rs  lib.rs  solidity_types.rs
components/usdt-balance-checker/: Cargo.toml
components/usdt-balance-checker/src/: lib.rs
components/warpcast-eigenlayer-tracker/: Cargo.toml  plan.md
components/warpcast-eigenlayer-tracker/src/: lib.rs
components/weather-zip-oracle/: Cargo.toml
components/weather-zip-oracle/src/: lib.rs
components/x-recent-post/: Cargo.toml  README.md
components/x-recent-post/src/: lib.rs
docs/: benefits.mdx  custom-components.mdx  design.mdx  how-it-works.mdx  index.mdx  overview.mdx
docs/cosmos-specs/: wasm-light-clients.md
docs/cryptography/: bls12_381.md
docs/handbook/: commands.mdx  component.mdx  custom-components.mdx  network-requests.mdx  overview.mdx  service.mdx  submission.mdx  template.mdx  triggers.mdx  variables.mdx  wavs-toml.mdx  workflows.mdx
docs/handbook/components/: blockchain-interactions.mdx  component.mdx  network-requests.mdx  utilities.mdx  variables.mdx
docs/interchain-specs/: x2y.md
docs/resources/: llms.mdx
docs/tutorial/: 1-overview.mdx  2-setup.mdx  3-project.mdx  4-component.mdx  5-build.mdx  6-run-service.mdx  7-prediction.mdx
examples/: MULTICHAIN.md
examples/brewery-finder/: Cargo.toml  README.md  plan.md
examples/brewery-finder/src/: lib.rs
examples/crypto-sentiment/: Cargo.toml  README.md
examples/crypto-sentiment/src/: lib.rs
examples/ens-domain-resolver/: Cargo.toml  README.md
examples/ens-domain-resolver/src/: lib.rs
examples/eth-gas-estimator/: Cargo.toml  README.md
examples/nft-ownership-checker/: Cargo.toml  README.md
examples/square-number/: Cargo.toml  README.md
examples/usdt-balance-checker/: Cargo.toml  README.md
examples/weather-zip-oracle/: Cargo.toml  README.md
script/: Common.s.sol  Deploy.s.sol  ShowResult.s.sol  Trigger.s.sol  avs-signing-key.sh  build-service.sh  build_components.sh  build_service.sh  cosmos-entrypoint.sh  create-aggregator.sh  create-deployer.sh  create-operator.sh  deploy-contracts.sh  deploy-cosmos-service.sh  get-deploy-status.sh  get-ipfs-gateway.sh  get-registry.sh  get-rpc.sh  get-trigger-status.sh  get-wasi-namespace.sh  ipfs-upload.sh  start_all.sh  upload-to-wasi-registry.sh
script/cosmic-wavs/: Cargo.toml  README.md
script/cosmic-wavs/src/: common.rs  lib.rs  smart_accounts.rs  wavs.rs  zktls.rs
script/cosmos/: configure-cosmos.sh  configure-local-cosmos.sh  cosmos-entrypoint.sh  deploy-cosmos-service.sh  docker-compose.yaml  setup-local-cosmos.sh
script/cw-orch-wavs/: Cargo.toml  README.md
script/cw-orch-wavs/demo-contracts/: bs721_base.wasm  btsg_wavs.wasm  cw_infuser.wasm
script/cw-orch-wavs/src/: lib.rs  networks.rs
script/cw-orch-wavs/src/tests/: bls12_381.rs
script/cw-orch-wavs/src/tools/: bls.rs  create_operator.rs  deployment.rs  mod.rs  service.rs  wallet.rs
script/template/: .env.example.aggregator  .env.example.cosmos  .env.example.operator
scripts/: README.md  batch_doc_to_rule.py  doc_to_rule.py  requirements.txt
src/common/: CmdRunner.sol
src/contracts/: WavsSubmit.sol
test_utils/: Cargo.toml  README.md  validate_component.sh
test_utils/src/: code_quality.rs  error_handling.rs  lib.rs  network_requests.rs  solidity_types.rs
testnet/: .env.example.aggregator  .env.example.operator  .gitignore  Makefile  README.md  create-aggregator.sh  create-operator.sh  docker-compose-multi.yml  start.sh
tools/: cosmos-entrypoint.sh  upgrade.sh
(+6 files in other folders)
