[workspace]
members = [
    "components/*",
    "script/cw-orch-wavs",
    # "test_utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt ={ version = "0.42.1", features = ["bitflags"]}
wit-bindgen = "0.42.1"
wstd = "0.5.3"
wasi = "0.14.1"
wavs-wasi-utils = "0.4.0-beta.4"
 


layer-climb = "0.4.3"
cosmos-sdk-proto = {version = "0.27.0",features = ["cosmwasm"]}
cosmrs = "0.22.0"
cosmwasm-schema ={ version =  "2.2.0"}
cosmwasm-std = { version = "2.2.2", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }

 
# Commonware
commonware-cryptography = "0.0.52"
commonware-utils = "0.0.52"
commonware-codec = "0.0.52"

# Other
sha = "0.3.0"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"

## Alloy
alloy-sol-macro = { version = "1.0.0", features = ["json"]}
alloy-sol-types = "1.0.0"
