[package]
<<<<<<<< HEAD:test_utils/Cargo.toml
name = "test_utils"
========
name = "evm-price-oracle"
>>>>>>>> upstream/main:components/evm-price-oracle/Cargo.toml
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
<<<<<<<< HEAD:test_utils/Cargo.toml
wavs-wasi-chain = { workspace = true }
commonware-cryptography = { workspace = true }
========
wit-bindgen-rt ={ workspace = true }
wavs-wasi-utils = { workspace = true }
>>>>>>>> upstream/main:components/evm-price-oracle/Cargo.toml
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
futures = "0.3.29"
tokio = { version = "1.36.0", features = ["full"] }
mockall = "0.12.1"

<<<<<<<< HEAD:test_utils/Cargo.toml
[dev-dependencies]
more-asserts = "0.3.1"
pretty_assertions = "1.4.0"
========
[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:evm-price-oracle"
target = "wavs:worker/layer-trigger-world@0.4.0-beta.4"
>>>>>>>> upstream/main:components/evm-price-oracle/Cargo.toml
