[package]
name = "cosmic-wavs-demo-infusion"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies (always needed)
wit-bindgen-rt = {workspace = true}
wavs-wasi-utils = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }

hex = "0.4.3"
sha2 = "0.10.9"
 
commonware-cryptography = { workspace = true }
commonware-codec = { workspace = true }

 
# cosmwasm crates
cosmwasm-std = { workspace = true }

# cosmos-sdk-proto = { workspace = true }
cw-infuser =  {  branch= "feat/wavs", package= "cw-infuser", git  = "https://github.com/permissionlessweb/cw-infuser", features = ["library"]}
cw-infusions =  { branch= "feat/wavs", package = "cw-infusions", git  = "https://github.com/permissionlessweb/cw-infuser"}
layer-climb = { workspace = true }
 

# Add for blockchain interactions

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:cosmic-wavs-demo-infusion"
target = "wavs:worker/layer-trigger-world@0.3.0"